@@ -1415,9 +1415,6 @@ static int faimtest_parse_oncoming(aim_session_t *sess, aim_frame_t *fr, ...)
   userinfo = va_arg(ap, aim_userinfo_t *);
   va_end(ap);
 
-  /* first check that we're not still ignoreing login messages */
-  if (!owl_timer_is_expired(owl_global_get_aim_login_timer(&g))) return(1);
-
   nz_screenname=owl_aim_normalize_screenname(userinfo->sn);
   owl_buddylist_oncoming(owl_global_get_buddylist(&g), nz_screenname);
   owl_free(nz_screenname);
